# Dotfiles

./: .bashrc  .xinitrc  .zshrc  configuration.nix  flake.nix  hardware-configuration.nix  hid-tmff2.nix  home.nix
.config/: mimeapps.list  starship.toml  user-dirs.dirs
.config/alacritty/: alacritty.yml
.config/booky/: Bconfig  Cconfig  bookys
.config/dmenu/: config.def.h  config.h  dmenu  dmenu.1  dmenu.c
.config/doom/: config.el  config.org  init.el  packages.el
.config/dunst/: dunstrc
.config/dwm/: config.def.h  config.def.h.orig  config.def.h.rej  config.h  config.h.orig  config.h.rej  drw.h  dwm  dwm-patches.h  dwm.c  dwm.c.orig  dwm.c.rej
.config/dwmblocks/: blocks.h  dwmblocks  dwmblocks.c
.config/eww/: eww.scss  eww.xml
.config/kitty/: kitty.conf
.config/newsboat/: urls
.config/nvim/: coc-settings.json  init.lua  init.vim
.config/picom/: picom.conf
.config/slock/: slock
.config/st/: config.def.h.orig  config.h  st  st.c  st.c.orig  st.h  st.h.orig  x.c  x.c.orig
.config/vifm/: vifmrc
.config/x11/: colemak-dhm.xmodmap  qwerty.xmodmap  sxrc  xprofile  xresources
.config/xplr/: init.lua
.config/zsh/: aliasesrc
.doom.d/: config.el  init.el  packages.el
.local/scripts/: calc  clock  cmusbar  corona  emoji-text  memory  music-changer  pacupdate  st-urlhandler  switch  volume  volume-script
dots/: .bashrc  .xinitrc  .zshrc  alacritty.yml  htoprc  mimeapps.list  picom.conf  proj.conf
dots/taffybarr/: LICENSE  flake.nix  taffybarr.cabal
dots/taffybarr/app/: Main.hs
dots/taffybarr/dist-newstyle/cache/: compiler  config
(+132 files in other folders)
